[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/delfino_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/menu/theme.tres" type="Theme" id=2]
[ext_resource path="res://classes/text/speech_bubble.gd" type="Script" id=3]
[ext_resource path="res://scenes/editor/assets/clickable_arrow.png" type="Texture" id=4]
[ext_resource path="res://scenes/actors/objects/sign/label_sizing.gd" type="Script" id=5]
[ext_resource path="res://scenes/actors/objects/sign/message_appear.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/actors/objects/sign/message_disappear.wav" type="AudioStream" id=7]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.429293, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.0941176 )

[sub_resource type="GradientTexture2D" id=7]
gradient = SubResource( 6 )
fill = 1
fill_from = Vector2( 0.4, 0.3 )
fill_to = Vector2( 0.9, 0.9 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.68, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "transition"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.68, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 80, 60 )

[node name="SpeechBubble" type="Node2D"]
modulate = Color( 0, 0, 1, 0 )
scale = Vector2( 0.68, 0.8 )
z_index = 50
z_as_relative = false
script = ExtResource( 3 )

[node name="Sizing" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -18.375
margin_top = -33.0
margin_right = 17.625
margin_bottom = -17.0
grow_vertical = 0
custom_fonts/font = ExtResource( 1 )

[node name="Arrow" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0.627451 )
margin_left = 5.625
margin_top = -12.0
margin_right = 133.625
margin_bottom = 116.0
rect_rotation = 90.0
rect_scale = Vector2( 0.1, 0.1 )
mouse_filter = 2
texture = ExtResource( 4 )

[node name="Dialogue" type="CenterContainer" parent="."]
margin_left = -108.375
margin_top = -33.0
margin_right = 108.625
margin_bottom = -16.0
grow_vertical = 0
rect_min_size = Vector2( 217, 0 )
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Dialogue"]
margin_left = 108.0
margin_right = 108.0
margin_bottom = 17.0
grow_vertical = 0
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
script = ExtResource( 5 )
max_width = 217.0
width_reference_path = NodePath("../../Sizing")

[node name="Panel" type="Panel" parent="Dialogue/RichTextLabel"]
self_modulate = Color( 0, 0, 0, 0.752941 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
mouse_filter = 2
theme = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Dialogue/RichTextLabel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource( 7 )
expand = true

[node name="MessageAppear" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 6 )
volume_db = -10.0
bus = "Sounds"

[node name="MessageDisappear" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 7 )
volume_db = -10.0
bus = "Sounds"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/transition = SubResource( 8 )

[node name="MessageArea" type="Area2D" parent="."]
position = Vector2( 0, 30 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MessageArea"]
position = Vector2( 0, -35 )
shape = SubResource( 10 )

[connection signal="visibility_changed" from="." to="." method="visibility_changed"]
[connection signal="body_entered" from="MessageArea" to="." method="body_entered"]
[connection signal="body_exited" from="MessageArea" to="." method="body_exited"]
